--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 	<section class="process-section spad">
 		<div class="container">
 			<div class="section-title text-center">
-				<h2>Get Started With Bitcoin</h2>
-				<p>Start learning about Bitcoin with interactive tutorials. It’s fun, easy, and takes only a few minutes! </p>
+				<h2>Get Started With InstaBanking</h2>
+				<p>Start learning about Internet Banking with interactive tutorials. It’s fun, easy, and takes only a few minutes! </p>
 			</div>
 			<div class="row">
 				<div class="col-md-4 process">
@@ -173,7 +173,7 @@
 						<figure class="process-icon">
 							<img src="img/process-icons/1.png" alt="#">
 						</figure>
-						<h4>Create Your Wallet</h4>
+						<h4>Create Your Account</h4>
 						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 					</div>
 				</div>
@@ -182,7 +182,7 @@
 						<figure class="process-icon">
 							<img src="img/process-icons/2.png" alt="#">
 						</figure>
-						<h4>Create Your Wallet</h4>
+						<h4>Get you documents Verified</h4>
 						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 					</div>
 				</div>
@@ -191,7 +191,7 @@
 						<figure class="process-icon">
 							<img src="img/process-icons/3.png" alt="#">
 						</figure>
-						<h4>Create Your Wallet</h4>
+						<h4>Account KIT delivered at Home</h4>
 						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 					</div>
 				</div>
@@ -244,7 +244,7 @@
 		<div class="container">
 			<div class="section-title text-center">
 				<h2>Meet Our Team</h2>
-				<p>Our experts in the field of crypto currency can always help you with any of your questions!</p>
+				<p>Our experts in the field of Banking can always help you with any of your questions!</p>
 			</div>
 		</div>
 		<div class="team-members clearfix">
@@ -500,7 +500,7 @@
 					<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese mollit anim id est laborum.</p>
 					<span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span>
+</span>
 				</div>
 				<div class="col-md-6 col-lg-2 offset-lg-1 footer-widget">
 					<h5 class="widget-title">Resources</h5>
