--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 		<div class="container-fluid">
 			<a href="index.html" class="site-logo">
 				<img src="img/bank3d.png" class="bank-logo" alt="">
-				<h4>TCS Bank</h4>
+				<h4 class="logo">
+					<img src="img/TCS.png" style="width:auto;height:1.5em" alt="">
+					 Bank</h4>
 			</a>
 			<div class="responsive-bar"><i class="fa fa-bars"></i></div>
 			<a href="" class="user"><i class="fa fa-user"></i></a>
