--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="cryptocurrency, unica, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<!-- <link href="img/favicon.ico" rel="shortcut icon"/> -->
+	<link href="img/favicon.ico" rel="shortcut icon"/>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -39,7 +39,7 @@
 			</a>
 			<div class="responsive-bar"><i class="fa fa-bars"></i></div>
 			<a href="" class="user"><i class="fa fa-user"></i></a>
-			<a href="" class="site-btn">Sign Up Free</a>
+			<a href="./signup.html" class="site-btn">Sign Up Free</a>
 			<nav class="main-menu">
 				<ul class="menu-list">
 					<li><a href="./blog.html">Solution</a></li>
@@ -99,25 +99,24 @@
 		<div class="container text-white">
 			<div class="section-title text-center">
 				<h2>Our Features</h2>
-				<p>Bitcoin is the simplest way to exchange money at very low cost.</p>
+				<p>Experience seamless banking with our innovative platform, offering convenience, security, expert support, and a range of financial solutions to meet your needs.</p>
 			</div>
 			<div class="row">
 				<!-- feature -->
 				<div class="col-md-6 col-lg-4 feature">
 					<i class="ti-mobile"></i>
 					<div class="feature-content">
-						<h4>Mobile Apps</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-						<a href="" class="readmore">Readmore</a>
+						<h4>Mobile App</h4>
+						<p>Our convenient mobile app allows you to manage your finances on the go, check your account balance, transfer funds, and pay bills with ease. </p>
+						<!-- <a href="#" class="readmore">Readmore</a> -->
 					</div>
 				</div>
-				<!-- feature -->
 				<div class="col-md-6 col-lg-4 feature">
 					<i class="ti-shield"></i>
 					<div class="feature-content">
 						<h4>Safe & Secure</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-						<a href="" class="readmore">Readmore</a>
+						<p>Rest assured that your money is in good hands with our state-of-the-art security measures, protecting your accounts from unauthorized access and fraud. </p>
+						<!-- <a href="" class="readmore">Readmore</a> -->
 					</div>
 				</div>
 				<!-- feature -->
@@ -125,8 +124,7 @@
 					<i class="ti-wallet"></i>
 					<div class="feature-content">
 						<h4>Wallet</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-						<a href="" class="readmore">Readmore</a>
+						<p>Our digital wallet feature lets you store and manage your cards, making it easy to make payments in-store or online securely. </p>
 					</div>
 				</div>
 				<!-- feature -->
@@ -134,8 +132,7 @@
 					<i class="ti-headphone-alt"></i>
 					<div class="feature-content">
 						<h4>Experts Support</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-						<a href="" class="readmore">Readmore</a>
+						<p>Our team of financial experts is here to assist you with any questions or concerns you may have, providing personalized advice and guidance to help you make informed decisions. </p>
 					</div>
 				</div>
 				<!-- feature -->
@@ -143,17 +140,15 @@
 					<i class="ti-reload"></i>
 					<div class="feature-content">
 						<h4>Instant Exchange</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-						<a href="" class="readmore">Readmore</a>
+						<p>Easily exchange currencies at competitive rates through our platform, whether you're traveling abroad or investing in international markets. </p>
 					</div>
 				</div>
 				<!-- feature -->
 				<div class="col-md-6 col-lg-4 feature">
 					<i class="ti-panel"></i>
 					<div class="feature-content">
-						<h4>Recuring Buys</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-						<a href="" class="readmore">Readmore</a>
+						<h4>Stock Buys</h4>
+						<p>Take control of your investments with our stock buying feature, allowing you to purchase stocks and build your portfolio directly from our platform. </p>
 					</div>
 				</div>
 			</div>
@@ -173,28 +168,28 @@
 				<div class="col-md-4 process">
 					<div class="process-step">
 						<figure class="process-icon">
-							<img src="img/process-icons/1.png" alt="#">
+							<img src="img/process-icons/profile.svg" class="icon" alt="#">
 						</figure>
 						<h4>Create Your Account</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+						<p>Sign up easily online or through our mobile app to get started with your banking journey. </p>
 					</div>
 				</div>
 				<div class="col-md-4 process">
 					<div class="process-step">
 						<figure class="process-icon">
-							<img src="img/process-icons/2.png" alt="#">
+							<img src="img/process-icons/bar.svg" class="icon" alt="#">
 						</figure>
 						<h4>Get you documents Verified</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+						<p> Submit your documents securely and conveniently through our platform for quick and hassle-free verification. </p>
 					</div>
 				</div>
 				<div class="col-md-4 process">
 					<div class="process-step">
 						<figure class="process-icon">
-							<img src="img/process-icons/3.png" alt="#">
+							<img src="img/process-icons/courser.svg" class="icon" alt="#">
 						</figure>
 						<h4>Account KIT delivered at Home</h4>
-						<p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+						<p> Receive your account kit right at your doorstep, making the process of opening an account effortless and convenient. </p>
 					</div>
 				</div>
 			</div>
@@ -361,7 +356,7 @@
 
 
 	<!-- Review section -->
-	<section class="review-section spad">
+	<!-- <section class="review-section spad">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 push-8">
@@ -405,7 +400,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- Review section end -->
 
 
@@ -498,10 +493,8 @@
 			<div class="row spad">
 				<div class="col-md-6 col-lg-3 footer-widget">
 					<img src="img/bank3d.png" class="bank-logo" alt="">
-					<h4>TCS Bank</h4>
-					<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese mollit anim id est laborum.</p>
-					<span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+					<h4 class="logo"><img src="img/TCS.png" style="width:auto;height:1.5em" alt=""> Bank</h4>
+					<span>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Developed <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="#" target="_blank">TCSBank</a>
 </span>
 				</div>
 				<div class="col-md-6 col-lg-2 offset-lg-1 footer-widget">
@@ -527,26 +520,26 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				<div class="col-md-6 col-lg-3 footer-widget pl-lg-5 pl-3">
 					<h5 class="widget-title">Follow Us</h5>
 					<div class="social">
-						<a href="" class="facebook"><i class="fa fa-facebook"></i></a>
-						<a href="" class="google"><i class="fa fa-google-plus"></i></a>
-						<a href="" class="instagram"><i class="fa fa-instagram"></i></a>
-						<a href="" class="twitter"><i class="fa fa-twitter"></i></a>
+						<a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+						<a href="#" class="google"><i class="fa fa-google-plus"></i></a>
+						<a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+						<!-- <a href="#" class="twitter"><i class="fa fa-x-twitter"></i></a> -->
 					</div>
 				</div>
 			</div>
 			<div class="footer-bottom">
 				<div class="row">
 					<div class="col-lg-4 store-links text-center text-lg-left pb-3 pb-lg-0">
-						<a href=""><img src="img/appstore.png" alt="" class="mr-2"></a>
-						<a href=""><img src="img/playstore.png" alt=""></a>
+						<a href="#"><img src="img/appstore.png" alt="#" class="mr-2"></a>
+						<a href="#"><img src="img/playstore.png" alt="#"></a>
 					</div>
 					<div class="col-lg-8 text-center text-lg-right">
 						<ul class="footer-nav">
-							<li><a href="">DPA</a></li>
-							<li><a href="">Terms of Use</a></li>
-							<li><a href="">Privacy Policy </a></li>
-							<li><a href="">support@company.com</a></li>
-							<li><a href="">(123) 456-7890</a></li>
+							<li><a href="#">TCSB</a></li>
+							<li><a href="#">Terms of Use</a></li>
+							<li><a href="#">Privacy Policy </a></li>
+							<li><a href="#">support@tcsbank.com</a></li>
+							<li><a href="#">(123) 456-7890</a></li>
 						</ul>
 					</div>
 				</div>
