--- a/signIn.html
+++ b/signIn.html
@@ -31,7 +31,7 @@
 		<div class="container-fluid">
 			<a href="#" class="site-logo">
 				<img src="img/bank3d.png" class="bank-logo" alt="">
-				<h4>TCS Bank</h4>
+				<h4 class="logo"><img src="img/TCS.png" style="width:auto;height:1.5em" alt=""> Bank</h4>
 			</a>
 			<div class="responsive-bar"><i class="fa fa-bars"></i></div>
 			<a href="" class="user"><i class="fa fa-user"></i></a>
@@ -43,7 +43,7 @@
 	<!-- Page info section -->
 	<section class="page-info-section">
 		<div class="container">
-			<h2>SignUp</h2>
+			<h2 style="font-size: 5em;">Sign In</h2>
 			<!-- <div class="site-beradcamb"> -->
 				<!-- <a href="">Home</a> -->
 				<!-- <span><i class="fa fa-angle-right"></i> Contact us</span> -->
@@ -70,7 +70,7 @@
 							<div class="col-md-12">
 								<div class="form-group">
 									<input class="check-form" type="text" placeholder="Employee ID*:" required autocomplete="cc-number">
-									<span><i class="ti-check"></i></span>
+									<span class="check-form-icon"><i class="ti-check"></i></span>
 								</div>
 							</div>
 							<div class="col-md-12">
@@ -80,9 +80,11 @@
 								</div>
 							</div>
 							
-							<div class="col-md-12">
+							<div class="col-md-6 justify-content-center">
 								<button class="site-btn sb-gradients mt-4">Login</button>
-								<a href="#">Forget Password?</a>
+							</div>
+							<div class="col-md-6">
+								<a href="#" class="site-btn-forget mt-4">Forget Password?</a>
 							</div>
 
 						</div>
