--- a/signup.html
+++ b/signup.html
@@ -31,7 +31,7 @@
 		<div class="container-fluid">
 			<a href="#" class="site-logo">
 				<img src="img/bank3d.png" class="bank-logo" alt="">
-				<h4>TCS Bank</h4>
+				<h4 class="logo"><img src="img/TCS.png" style="width:auto;height:1.5em" alt=""> Bank</h4>
 			</a>
 			<div class="responsive-bar"><i class="fa fa-bars"></i></div>
 			<a href="" class="user"><i class="fa fa-user"></i></a>
@@ -43,7 +43,7 @@
 	<!-- Page info section -->
 	<section class="page-info-section">
 		<div class="container">
-			<h2>Login</h2>
+			<h2 style="font-size: 5em;">Sign Up</h2>
 			<!-- <div class="site-beradcamb"> -->
 				<!-- <a href="">Home</a> -->
 				<!-- <span><i class="fa fa-angle-right"></i> Contact us</span> -->
@@ -67,24 +67,56 @@
 									<span><i class="ti-check"></i></span>
 								</div>
 							</div> -->
+							<div class="col-md-6">
+								<div class="form-group">
+									<input class="check-form" type="text" placeholder="First Name*:" maxlength="50" required>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group">
+									<input class="check-form" type="text" placeholder="Last Name*:" maxlength="50" required>
+								</div>
+							</div>
+							<!-- <div class="col-md-12">
+								<div class="form-group">
+									<input class="check-form" type="number" placeholder="Employee ID*:"  required autocomplete="email">
+								</div>
+							</div> -->
 							<div class="col-md-12">
 								<div class="form-group">
-									<input class="check-form" type="text" placeholder="Employee ID*:" required autocomplete="cc-number">
-									<span><i class="ti-check"></i></span>
+									<input class="check-form" type="email" placeholder="Company Email**:" required autocomplete="cc-number">
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
-									<input class="check-form" type="password" placeholder="Password*:" required>
-									<span><i class="ti-check"></i></span>
+									<input class="check-form" type="password" id="password" multiple="30" placeholder="Password*:" required>
+								</div>
+							</div>
+							<div class="col-md-12">
+								<div class="form-group">
+									<input class="check-form" type="password" id="confirm_password" multiple="30" placeholder="Confirm Password*:" required>
+								</div>
+							</div>
+							<span class="site-btn-match" id="message"></span>
+
+							<div class="col-md-12">
+								<div class="form-group">
+									<textarea class="check-form" type="email" maxlength="100" placeholder="Address*:"></textarea>
+								</div>
+							</div>
+
+							<div class="col-md-12">
+								<div class="form-group">
+									<input class="check-form" type="text" maxlength="10" placeholder="Contact Number*:" required autocomplete="cc-number">
 								</div>
 							</div>
 							
-							<div class="col-md-12">
-								<button class="site-btn sb-gradients mt-4">Login</button>
-								<a href="#">Forget Password?</a>
+							<div class="col-md-6 justify-content-center">
+								<button class="site-btn sb-gradients mt-4">Register</button>
 							</div>
-
+							<div class="col-md-6">
+								<a href="./signin.html" class="site-btn-forget mt-4">Already registered?</a>
+							</div>
 						</div>
 					</form>
 				</div>
