--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 				<img src="img/bank3d.png" class="bank-logo" alt="">
 				<h4 class="logo">
 					<img src="img/TCS.png" style="width:auto;height:1.5em" alt="">
-					 Bank</h4>
+					 Bank
+				</h4>
 			</a>
 			<div class="responsive-bar"><i class="fa fa-bars"></i></div>
 			<a href="" class="user"><i class="fa fa-user"></i></a>
@@ -43,10 +44,10 @@
 			<nav class="main-menu">
 				<ul class="menu-list">
 					<li><a href="./blog.html">Solution</a></li>
-					<li><a href="">Features</a></li>
+					<li><a href="./single-blog.html">Features</a></li>
 					<!-- <li><a href="">News</a></li> -->
 					<li><a href="./about.html">About</a></li>
-					<li><a href="./contact.html">Contact</a></li>
+					<li><a href="./information.html">Contact</a></li>
 				</ul>
 			</nav>
 		</div>
